# TRACE_Algonauts

./: app.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt  results.md
app/pages/: 2_Results.py  3_Progress.py
configs/: configs.yaml  dirs.yaml
experiments/hcptrt_across_tasks/: training_parameters.yaml
experiments/hcptrt_across_tasks/ca_network/: training_parameters.yaml
experiments/hcptrt_across_tasks/ca_parcels/: training_parameters.yaml
experiments/hcptrt_across_tasks/yeo17/: training_parameters.yaml
experiments/hcptrt_across_tasks/yeo7/: training_parameters.yaml
experiments/subject+multi_episodes+parcel_trials_clustering/: training_parameters.yaml
experiments/subject+multi_episodes+parcel_trials_clustering/v1/: training_parameters.yaml
experiments/subject_episode+parcel+window_subsample_trials/: training_parameters.yaml
experiments/subject_episode+parcel+window_subsaomple_trials/: training_parameters.yaml
experiments/subject_episode+parcel_trials_clustering/: training_parameters.yaml
experiments/subject_episode+parcel_trials_clustering/v1/: training_parameters.yaml
experiments/test_saved_data_artifact/: training_parameters.yaml
pages/: 1_Home.py  2_Results.py  3_Progress.py
shell_scripts/: datalad_setup.sh  get_datasets.sh  setup_env.sh
utils/: dataloader.py  experiment_recorder.py  preprocessing.py
utils/loaders/: __init__.py  algonauts.py  hcptrt.py  parcel_maps.py
